# hogwarts-apitest

./: README.md  pyproject.toml
hogwarts_apitest/: __init__.py  api.py
tests/: __init__.py  test_core.py
tests/api/: httpbin.py
