[tool.poetry]
name = "hogwarts-apitest"
version = "0.1.0"
description = ""
authors = ["erinpc <4540807@qq.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.5"
pytest = "^5.0"
requests = "^2.22"

[tool.poetry.dev-dependencies]
coverage = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
